<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (C) 2023 XperiaLabs Project
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~      http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<resources>
    <string name="app_name" translatable="false">Xperia Settings</string>
    <string name="app_summary" translatable="false">Configure device specific settings</string>

    <!-- Display Settings -->
    <string name="display_title">Display</string>
    <string name="display_setting_header">Image Quality Settings</string>
    <string name="display_setting_summary">Choose between brilliant colors or a faithful reproduction of the creator\'s intended vision to create an unforgettable visual experience</string>

    <!-- Sound Settings -->
    <string name="sound_title">Sound</string>
    <string name="audio_setting_header">Audio Settings</string>
    <string name="audio_setting_summary">Elevate your sound quality with the Dolby Sound EQ and 360 Reality Audio Upmix for a remarkable and immersive audio playback experience</string>

    <!-- Charging Settings -->
    <string name="charging_title">Charging</string>
    <string name="charger_setting_header">Battery Care</string>
    <string name="charger_setting_summary">Optimize battery longevity by adjusting the maximum charging percentage and fine-tuning other charging settings</string>

    <!-- Creator Mode -->
    <string name="cm_display_header">Color Gamut and Contrast</string>
    <string name="cm_switch_title">Creator Mode</string>
    <string name="cm_switch_description">Provide a faithful reproduction of the creator\'s intended vision through high definition display and specially developed image processing compatible with BT.2020 color gamut and 10-bit color of HDR specification.</string>

    <!-- Display Settings Footer  -->
    <string name="display_setting_explained">Apps that support a wide color gamut will automatically be shown in their original colors.\n\n\nHDR videos in fullscreen mode will be automatically displayed with Creator Mode.</string>

    <!-- Audio Settings Top -->
    <string name="audio_menu_title">@string/audio_setting_header</string>
    <string name="audio_menu_header">Sound Quality</string>

    <!-- DIRAC AE - Settings Page -->
    <string name="dirac_title">DIRAC Audio Engine</string>
    <string name="dirac_summary">The DIRAC Audio Engine optimizes sound quality by improving clarity, balance, spatial accuracy and enhances your audio experience by allowing you to choose from multiple headset presets</string>
    <string name="dirac_enable">Enable DIRAC</string>
    <string name="dirac_headset_title">Headset Preset</string>
    <string name="dirac_preset_title">Equalizer Preset</string>
    <string name="dirac_hifi_title">Sound Fidelity</string>
    <string name="dirac_hifi_enable_title">Hi-Fi Mode</string>
    <string name="dirac_hifi_summary">Decrease overall noise and high volume distortion while increasing audio quality</string>

    <!-- DIRAC AE - Headset Types (Xiaomi Only) -->
    <string name="dirac_headset_earbuds">Mi Earbuds</string>
    <string name="dirac_headset_in_ear_2013">Mi In-Ear (2013)</string>
    <string name="dirac_headset_piston_1">Mi Piston-1</string>
    <string name="dirac_headset_general_inear">General In-Ear</string>
    <string name="dirac_headset_piston_basic">Basic Edition</string>
    <string name="dirac_headset_piston_2">Mi Piston-2</string>
    <string name="dirac_headset_piston_standard">Standard Edition</string>
    <string name="dirac_headset_piston_youth">Youth Edition</string>
    <string name="dirac_headset_piston_color">Color Edition</string>
    <string name="dirac_headset_in_ear">Mi In-Ear</string>
    <string name="dirac_headset_capsule">Mi Capsule</string>
    <string name="dirac_headset_in_ear_pro">Mi In-Ear Pro</string>
    <string name="dirac_headset_comfort">Mi Comfort</string>
    <string name="dirac_headset_reduction_noise">Mi Noise Cancelling Type-C</string>
    <string name="dirac_headset_cancelling">Mi Noise Cancelling 3.5mm</string>
    <string name="dirac_headset_half_in_ear">Mi Half In-Ear</string>
    <string name="dirac_headset_in_ear2">Mi In-Ear 2</string>
    <string name="dirac_headset_earphone_basic">Mi Earphones Basic</string>
    <string name="dirac_headset_earphone">Mi Earphones</string>
    <string name="dirac_headset_ear_four">Mi Quadruple Driver Earphones</string>
    <string name="dirac_headset_piston_typec">Mi In-Ear Headphones (Type-C)</string>
    <string name="dirac_headset_bluetooth_collar">Mi Bluetooth Neckband</string>
    <string name="dirac_headset_bluetooth_linefree">Mi Bluetooth Earphones</string>
    <string name="dirac_headset_redmi_earphones">Redmi Earphones</string>

    <!-- DIRAC AE - Equalizer Presets -->
    <string name="dirac_preset_default">Default</string>
    <string name="dirac_preset_rock">Rock</string>
    <string name="dirac_preset_jazz">Jazz</string>
    <string name="dirac_preset_pop">Pop</string>
    <string name="dirac_preset_classical">Classical</string>
    <string name="dirac_preset_hiphop">Hip Hop</string>
    <string name="dirac_preset_blues">Blues</string>
    <string name="dirac_preset_electronic">Electronic</string>
    <string name="dirac_preset_country">Country</string>
    <string name="dirac_preset_dance">Dance</string>
    <string name="dirac_preset_metal">Metal</string>
    <string name="dirac_preset_bass_booster">Bass Booster</string>
    <string name="dirac_preset_live">Live</string>
    <string name="dirac_preset_balanced">Balanced</string>
    <string name="dirac_preset_bass_reduction">Bass Reduction</string>
    <string name="dirac_preset_treble_reduction">Treble Reduction</string>
    <string name="dirac_preset_soft_bass">Soft Bass</string>
    <string name="dirac_preset_soft_treble">Soft Treble</string>

    <!-- DIRAC AE - QS Tile -->
    <string name="dirac_qs_tile_title">DIRAC Audio</string>

    <!-- Audio Settings Bottom -->
    <string name="threesixtyupmix_setting_header">360 Upmix</string>
    <string name="threesixtyupmix_setting_summary">With Sony\'s 360 Reality Audio Upmix (360 Upmix) technology, you can enjoy spatial and immersive sound with regular stereo sources\nCheck 360 Reality Audio for details.</string>
    <string name="effectpriority_setting_header">Effect Priority</string>
    <string name="effectpriority_setting_summary">The 360 Upmix app will always take priority over the other effects you\'ve turned on (either Dolby Sound with 360 Upmix or just 360 Upmix by itself) for the media sound of apps.</string>
    <string name="audio_setting_explained">While playing Dolby Sound content or 360 Reality Audio content, the content\'s information will take precedence over the settings on this screen. High resolution content can also be play properly when both Dolby Sound and 360 Upmix are turned off.\n\n\n\nAbout Spatial Audio\nTo enable the 360 Reality Audio feature, turn on Spatial Sound.\nDolby Sound does support Spatial Audio.</string>

    <!-- Battery Care -->
    <string name="advanced_charger_title">@string/charger_setting_header</string>
    <string name="charger_setting_main_enable_title">Use Battery Care</string>
    <string name="device_charging_enable_title">Enable Charging</string>
    <string name="device_charging_enable_summary">Disabling this setting will stop the device from charging</string>
    <string name="device_charging_control_title">Charging Limit</string>
    <string name="charger_setting_explained">If Battery Care is enabled, the device will start charging only when the following requirements have been met:\n 1. You have enabled charging by toggling \"Enable Charging\".\n 2. Your device\'s battery level is lower than the charging limit you\'ve set.\n\n\nCharging stops when a specified percentage is reached to increase the lifespan of the battery.\nSetting that limit to 80% yields even better results.</string>

    <!-- USB Section | External Monitor -->
    <string name="usb_title">USB</string>
    <string name="usb_extmon_setting_header">External Monitor</string>
    <string name="usb_extmon_summary">Enable the External Monitor app to customize external camera settings and utilize your Xperia\'s display as a reliable and accurate viewfinder for capturing vibrant, true-to-life colors</string>

    <!-- USB Audio Output -->
    <string name="usba_setting_header">External Audio Output</string>
    <string name="usba_setting_summary">Adjust media, in-call or the microphone\'s audio volume when outputting sound to an external device via the USB port</string>

    <!-- DSM (DualShock/Sense Manager) -->
    <string name="gaming_title">Gaming</string>
    <string name="gc_dsm_setting_header">Wireless Controller for PS5 and PS4</string>
    <string name="gc_dsm_setting_summary">Connect your PlayStation© controllers to your Xperia device to utilize them for gaming</string>

    <!-- Creator Mode Previous Image Button -->
    <string name="previous_page_content_description">Previous</string>

    <!-- Creator Mode Next Image Button -->
    <string name="next_page_content_description">Next</string>

    <!-- Creator Mode Preview Images -->
    <string name="colors_viewpager_content_description">Color Preview</string>

    <!-- H.S (Heat Suppression) Power Control QS Tile -->
    <string name="charger_qs_tile_title">Pause Charging</string>

    <!-- Refresh Rate QS Tile -->
    <string name="refresh_rate_tile_title">Refresh Rate</string>
</resources>