<?xml version="1.0" encoding="utf-8"?>
<!--
 * Copyright (C) 2023 The LineageOS Project
 * SPDX-License-Identifier: Apache-2.0
-->

<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:title="@string/app_name">

    <PreferenceCategory
        android:key="display"
        android:title="@string/display_title">

        <Preference
            android:key="advanced_disp_settings"
            android:icon="@drawable/ic_display_enhance"
            android:title="@string/display_setting_header"
            android:summary="@string/display_setting_summary">
            <intent
                android:action="android.intent.action.MAIN"
                android:targetPackage="com.xperia.parts"
                android:targetClass="com.xperia.parts.display.DisplaySettingsActivity" />
        </Preference>

    <PreferenceCategory
        android:key="charging"
        android:title="@string/charging_title">

        <Preference
            android:key="advanced_charger_settings"
            android:icon="@drawable/ic_battery_care"
            android:title="@string/charger_setting_header"
            android:summary="@string/charger_setting_summary"
            android:fragment="com.xperia.parts.charger.ChargerSettingsActivity">
            <intent
                android:action="android.intent.action.MAIN"
                android:targetPackage="com.xperia.parts"
                android:targetClass="com.xperia.parts.charger.ChargerSettingsActivity" />
        </Preference>

    </PreferenceCategory>

</PreferenceScreen>